@@ -47,8 +47,9 @@ explanation of how and why you fixed the problem the way you did, say.
 Emailing merge directives is such a common thing that the ``send`` command
 without options will create a merge directive, fire up your email
 tool and attach it, ready for you to add the explanatory text bit.
-See the online help for ``send`` and the `Configuration reference`_
-for further details on how to configure this.
+See the online help for ``send`` and
+`Configuration Settings <../user-reference/bzr_man.html#configuration-settings>`_
+in the User Reference for further details on how to configure this.
 
 Applying a merge directive
 --------------------------
